# sortly

./: .gitignore  CNAME  DOCS.md  README.md  build_executables.py  duplicate_detector.py  index.html  movie_detector.py  organizer_cli.py  organizer_core.py  organizer_gui.py  organizer_gui_qt.py  pyproject.toml  requirements.txt  smart_presets.py  sortly_cli.py  sortly_gui_qt.py
.github/workflows/: release.yml
assets/sortly_logos/: README.txt
installer/: sortly.iss
sortly/: __init__.py  __main__.py  cli.py  core.py  gui_qt.py  movie_detector.py  smart_presets.py
